syntax = "proto3";

option csharp_namespace = "WorkflowService";

message ExecuteRequest {
  string id = 1;
  string type = 2;
  string properties = 3;
  optional string dataFrame = 4;
}

message GrpcExecutionModel {
  string id = 1;
  string type = 2;
  bool status = 3;
  string dataFrame = 4;
}

message GrpcExecutionResponse { GrpcExecutionModel executedNode = 1; }

service GrpcExecutionService {
  rpc ExecuteNode(ExecuteRequest) returns (GrpcExecutionResponse);
}